--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev1":"node backend/server.js",
     "dev": "nodemon backend/server.js",
     "build": "next build",
     "start": "next start"
@@ -22,6 +23,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "yarn": "^1.22.22"
   }
 }
